# mmshap_medclip

./: .gitignore  .pre-commit-config.yaml  README.md  REPORTE_TECNICO_MM_SHAP_MEDCLIP.md  compare_models.py  debug_biomedclip.py  debug_heatmap_detailed.py  documentation_tecnica.md  final_diagnosis.py  final_test_biomedclip.py  investigate_predictor.py  pyproject.toml  setup.sh  tatus  test_alpha_adjustment.py  test_fix.py  test_whyxrayclip.py
configs/: roco_classification_rclip.yaml  roco_isa_biomedclip.yaml  roco_isa_pubmedclip.yaml  roco_isa_rclip.yaml  roco_isa_whyxrayclip.yaml  vqa_med_2019_pubmedclip.yaml
experiments/: README_compare_models.md  analyze_batch_results.py  biomedclip_roco_isa.py  compare_all_models.py  compare_vqa_models.py  pubmedclip_roco_isa.ipynb  pubmedclip_roco_isa.py  rclip_roco_isa.py  roco_isa_experiments.ipynb  roco_isa_experiments.py  whyxrayclip_roco_isa.ipynb  whyxrayclip_roco_isa.py
notebooks/: 01_heatmaps_and_figures.ipynb  01_pubmedclip_isa_demo.ipynb  01_pubmedclip_roco_isa_formateado.ipynb  02_rclip_classification_demo.ipynb  02_rclip_classification_demo.py  02_whyxrayclip_roco_isa.ipynb
scripts/: compare_all_models.py  download_dataset.py  download_vqa_med_2019.py
src/mmshap_medclip/: __init__.py  comparison.py  comparison_vqa.py  devices.py  io_utils.py  metrics.py  models.py  registry.py
src/mmshap_medclip/datasets/: __init__.py  base.py  roco.py  vqa_med_2019.py
src/mmshap_medclip/shap_tools/: clip_adapter.py  masker.py  predictor.py  vqa_predictor.py
src/mmshap_medclip/tasks/: __init__.py  classification.py  isa.py  (+3 more)
(+1 files in other folders)
